--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 header h1{
     font-size: 3rem;
     color:darkorange;
-    -webkit-text-stroke: #000 1px;
+    -webkit-text-stroke: ridge #000 1px;
     letter-spacing: 2px;
 }
 
@@ -49,7 +49,7 @@ header h1{
     background-color:rgb(128, 211, 214);
     height: 10%;
     width: 100%;
-    border-bottom: 2px ridge #000;
+    border-bottom: 2px #000;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -104,7 +104,7 @@ header h1{
     justify-content: space-between;
     color:darkcyan;
 
-    font-family:cursive;
+    font-family:monospace;
     font-size: 1.3rem;
     letter-spacing: .5px;
     margin: 5px;
