--- a/style.css
+++ b/style.css
@@ -112,6 +112,19 @@ header h1{
     background-color:snow;
     border-radius: 10px;
 }
+.content .box2 ul li label{
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+
+.toggle{
+    background-color: red;
+    cursor: pointer;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 100%;
+}
 
 .content .box2 ul li span{
     text-align: center;
