--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ header h1{
     font-size: 1.2rem;
     letter-spacing: .5px;
     margin: 5px;
-    padding: 5px 10px;
+    padding: 10px;
     background-color:snow;
     border-radius: 10px;
 }
