--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 html,
@@ -56,7 +59,8 @@ header h1{
 }
 
 .content .box1 input[type="text"]{
-    font-size: 1.1rem;
+    font-size: 1rem;
+    letter-spacing: .5px;
     width: 80%;
     height: 75%;
     padding-left: 10px;
@@ -70,6 +74,7 @@ header h1{
 
 .content .box1 input[type="button"]{
     font-size: 1.1rem;
+    font-weight: 600;
     width: 15%;
     height: 80%;
     border: none;
@@ -106,16 +111,19 @@ header h1{
 
     font-family:monospace;
     font-size: 1.2rem;
+    font-weight: 600;
     letter-spacing: .5px;
     margin: 5px;
-    padding: 10px;
+    padding: 5px 10px;
     background-color:snow;
     border-radius: 10px;
 }
+
 .content .box2 ul li label{
     display: flex;
-    gap: .5rem;
+    justify-content: space-between;
     align-items: center;
+    overflow: scroll;
 }
 
 .toggle{
@@ -124,6 +132,7 @@ header h1{
     height: 1rem;
     width: 1rem;
     border-radius: 100%;
+    margin-right: 1rem;
 }
 
 .content .box2 ul li span{
@@ -148,7 +157,7 @@ footer p{
     font-weight: 400;
 }
 
-@media (max-width:600px){
+@media (max-width:900px){
     .content {
         width: 90%;
     }
